<resources>
    <string name="app_name">Tickle Ball</string>
    <string name="animated_background_image">animated background image</string>
    <string name="tickle_ball">Tickle Ball</string>
    <string name="play">PLAY</string>
    <string name="idle_animation">Idle animation</string>
    <string name="idle_screen_name">Tickle Where?!</string>
    <string name="home_screen_bkgnd_image">home screen bkgnd image</string>
    <string name="hiscore">Hiscore</string>
    <string name="hiscore_title">Hiscore</string>
    <string name="hiscore_screen">Tickle Streak</string>
    <string name="tickle_success_face">tickle success face</string>
    <string name="tickle_fail_face">tickle fail face</string>
    <string name="coin">coin</string>
    <string name="success_screen">You Win!</string>
    <string name="fail_screen">Uh Oh! Game Over!</string>
    <string name="successful_tickle">successful tickle</string>
    <string name="successful_next">Next</string>
    <string name="fail_next">Next</string>
    <string name="db_data">db_data</string>
    <string name="play_button">Play Button</string>
    <string name="hiscore_button">Hiscore Button</string>
    <string name="tickle_title">Tickle Title</string>
    <string name="streak_data">Streak Data</string>
    <string name="hiscore_title_screen">Hiscore Title Screen</string>
    <string name="head">head</string>
    <string name="armpit">armpit</string>
    <string name="foot">foot</string>
    <string name="play_next_game">Play Next Game</string>
    <string name="play_again">Play Again</string>
    <string name="buy_success">Buy Success</string>
    <string name="upload_button">Upload Button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="upload_your_own_content">Upload Your Own Content</string>
    <string name="username">Username</string>
    <string name="username2">Username</string>
    <string name="tickle_spot">Tickle Spot:</string>
    <string name="tickle_spot2">Tickle Spot</string>
    <string name="upload">Upload</string>
    <string name="upload_vids_button">Upload Button</string>
    <string name="editable_username">Editable Username</string>
    <string name="editable_tickle_spot">Editable Tickle Spot</string>
    <string name="editable_username_field">Editable Username Field</string>
    <string name="record_idle_video">Record Idle Video</string>
    <string name="record_success_video">Record Success Video</string>
    <string name="record_idle_vid_btn">record idle vid btn</string>
    <string name="record_success_vid_btn">record success vid btn</string>
    <string name="record_fail_vid_btn">record fail vid btn</string>
    <string name="record_fail_video">Record Fail Video</string>
    <string name="trophy1">trophy1</string>
    <string name="coin1">coin1</string>
    <string name="trophy3">trophy3</string>
    <string name="coin3">coin3</string>
    <string name="trophy2">trophy2</string>
    <string name="coin2">coin2</string>
    <string-array name="tickle_spots">
        <item>head</item>
        <item>armpit</item>
        <item>foot</item>
    </string-array>
</resources>