<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:layout_editor_absoluteX="-102dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/hiscoreButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:background="@null"
        android:contentDescription="@string/hiscore_button"
        android:onClick="LaunchHiScore"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/trophy" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:background="@null"
        android:contentDescription="@string/upload_button"
        android:onClick="UploadGame"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/camera" />

    <ImageButton
        android:id="@+id/tickleButton"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/play_button"
        android:onClick="LaunchGame"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickleView"
        app:srcCompat="@drawable/tickle_ball_play" />

    <ImageView
        android:id="@+id/tickleView"
        android:layout_width="309dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/tickle_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tickle_text" />

</androidx.constraintlayout.widget.ConstraintLayout>