<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FailActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/coinButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:contentDescription="@string/buy_success"
        android:onClick="LaunchSuccess"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/coin" />

    <ImageButton
        android:id="@+id/nextGame2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@null"
        android:contentDescription="@string/play_again"
        android:onClick="LaunchGame"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/tickle_ball_play" />

    <ImageView
        android:id="@+id/trophy3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:contentDescription="@string/trophy3"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophy" />

    <TextView
        android:id="@+id/streak3"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/trophy3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coin3"
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:contentDescription="@string/coin3"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin" />

    <TextView
        android:id="@+id/amount3"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="monospace"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/coin3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>